volunteer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volunteer-service
  labels:
    app: volunteer-service
spec:
  type: LoadBalancer
  selector:
    app: volunteer-service
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
